# xenonis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  format-files.sh  setup.bat
bench/: CMakeLists.txt  bigint_bench_main.cpp
doc/: Doxyfile.in
include/: CMakeLists.txt  bigint.hpp  bigint_config.hpp.in  integer_traits.hpp
include/algorithms/: arithmetic.hpp  compare.hpp  conversion.hpp  util.hpp
include/asm/: add.asm
include/container/: bigint_data.hpp  data_view.hpp
src/: CMakeLists.txt  algorithms.hpp  bigint.cpp  bigint.hpp  bigint_config.hpp.in  bigint_data.hpp  integer_traits.hpp
test/: CMakeLists.txt  bigint_test_main.cpp
